# rollingAI3D

./: README.md  check3d_32_64.pro  check3d_32_64.pro.user.1463a24  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mimageview.cpp  mimageview.h
model/: mmodel.cpp  mmodel.h
task/: camera3d.cpp  camera3d.h  emitobject.cpp  emitobject.h  resultdata.h  taskallocation.cpp  taskallocation.h  threedtasks.cpp  threedtasks.h
task/API/: Callback.h  CameraDll.h  CameraStatus.h  PeakStructure.h  Vevo.lib  VevoParameterDefinitions.h
task/API/x64/: Vevo.lib
task/ConsoleExample/: CMakeLists.txt  ConsoleExample.cpp  ConsoleExample.h  ConsoleExample.rc  ConsoleExample.sln  ConsoleExample.vcxproj  ConsoleExample.vcxproj.filters  FrameBuffer.cpp  FrameBuffer.h  README.md  resource.h  vevolog.conf
task/algorithmCC/: main_recognise_for_point_cloud.cpp  main_recognise_for_point_cloud.h  main_recognise_for_point_cloud_2D.cpp  main_recognise_for_point_cloud_2D.h  main_recognise_for_point_cloud_3D.cpp  main_recognise_for_point_cloud_3D.h  point_cloud_recognise_function.cpp  point_cloud_recognise_function.h
